--- a/package.json
+++ b/package.json
@@ -3,23 +3,27 @@
   "version": "1.0.0",
   "main": "/backend/server.js",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon backend/server.js",
-		"start": "node backend/server.js",
-		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "test": "SET NODE_ENV=test & mocha ",
+    "dev": "nodemon backend/server.js",
+    "start": "node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
+  "test": "react-scripts test --env=jsdom",
   "type": "module",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "cookie-parse": "^0.4.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.0"
+    "mongoose": "^8.9.0",
+    "react-scripts": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
