--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "nc",
-  "version": "1.0.0",
-  "main": "/backend/server.js",
-  "scripts": {
-    "test": "SET NODE_ENV=test & mocha ",
-    "dev": "nodemon backend/server.js",
-    "start": "node backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
-  },
-  "keywords": [],
-  "author": "",
-  "test": "react-scripts test --env=jsdom",
-  "type": "module",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "axios": "^1.7.9",
-    "bcryptjs": "^2.4.3",
-    "cookie-parse": "^0.4.0",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.1",
-    "react-scripts": "^5.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  }
+	"name": "flixxit",
+	"version": "1.0.0",
+	"description": "",
+	"main": "backend/server.js",
+	"scripts": {
+		"dev": "NODE_ENV=development nodemon backend/server.js",
+		"start": "NODE_ENV=production node backend/server.js",
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+	},
+	"keywords": [],
+	"author": "",
+	"type": "module",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^1.7.2",
+		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.6",
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.5.1"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.4"
+	}
 }
